--- a/.ssh/config
+++ b/.ssh/config
@@ -1,41 +1,28 @@
+Host stage stage.grokker.com
+     User ubuntu
+     ForwardAgent yes
+     StrictHostKeyChecking no
+     UserKnownHostsFile /dev/null
+     HostName stage.grokker.com
+     IdentityFile ~/.ssh/grokker_east_rsa
+
+Host prod grokker.com
+     User ubuntu
+     ForwardAgent yes
+     StrictHostKeyChecking no
+     UserKnownHostsFile /dev/null
+     HostName grokker.com
+     IdentityFile ~/.ssh/grokker_east_rsa
+
+Host *amazonaws.com
+     User ubuntu
+     ForwardAgent yes
+     StrictHostKeyChecking no
+     UserKnownHostsFile /dev/null
+     IdentityFile ~/.ssh/grokker_east_rsa
+
 Host *
      ForwardAgent yes
      Protocol 2
      ForwardX11 no
      ServerAliveInterval 30
-
-Host bh1
-     User walkerch
-     HostName bh1.811.mtvi.com
-
-Host bh2
-     User walkerch
-     HostName bh2.811.mtvi.com
-
-Host xfire-stage-1
-     User ua
-     HostName xfire-stage-1.811.mtvi.com
-
-Host xfire-stage-2
-     User ua
-     HostName xfire-stage-2.811.mtvi.com
-
-Host xfire-stagemysql-1
-     User ua
-     HostName xfire-stagemysql-1.811.mtvi.com
-
-Host xfire-utility-1 xfire-utility-1.811.mtvi.com
-     User ua
-     HostName xfire-utility-1.811.mtvi.com
-
-Host xfire-utility-2 xfire-utility-2.811.mtvi.com
-     User ua
-     HostName xfire-utility-2.811.mtvi.com
-
-Host xfire-spare-1 xfire-spare-1.811.mtvi.com
-     User ua
-     HostName xfire-spare-1.811.mtvi.com
-
-Host xfire-mysql-*
-     User ua
-     ProxyCommand ssh -q -a -x ua@xfire-utility-1.811.mtvi.com nc %h 22
