setup more tab completion for grokker hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -21,6 +21,20 @@ Host *amazonaws.com
      UserKnownHostsFile /dev/null
      IdentityFile ~/.ssh/grokker_east_rsa
 
+Host utility utility.gr0k.us
+     User ubuntu
+     ForwardAgent yes
+     StrictHostKeyChecking no
+     UserKnownHostsFile /dev/null
+     IdentityFile ~/.ssh/grokker_east_rsa
+
+Host *gr0k.us
+     User ubuntu
+     ForwardAgent yes
+     StrictHostKeyChecking no
+     UserKnownHostsFile /dev/null
+     IdentityFile ~/.ssh/grokker_east_rsa
+
 Host *
      ForwardAgent yes
      Protocol 2
