--- a/.ssh/config
+++ b/.ssh/config
@@ -26,6 +26,7 @@ Host utility utility.gr0k.us
      ForwardAgent yes
      StrictHostKeyChecking no
      UserKnownHostsFile /dev/null
+     HostName utility.gr0k.us
      IdentityFile ~/.ssh/grokker_east_rsa
 
 Host *gr0k.us
