--- a/.ssh/config
+++ b/.ssh/config
@@ -36,6 +36,14 @@ Host *gr0k.us
      UserKnownHostsFile /dev/null
      IdentityFile ~/.ssh/grokker_east_rsa
 
+Host db3
+     User ubuntu
+     ForwardAgent yes
+     StrictHostKeyChecking no
+     UserKnownHostsFile /dev/null
+     IdentityFile ~/.ssh/grokker_east_rsa
+     ProxyCommand ssh ubuntu@utility nc %h %p
+
 Host *
      ForwardAgent yes
      Protocol 2
